[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pycti"
dynamic = ["version"]
description = "Python API client for OpenCTI."
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
authors = [
    { name = "Filigran", email = "contact@filigran.io" }
]
maintainers = [
    { name = "Filigran" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Natural Language :: French",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
requires-python = ">=3.7" # python version is controlled in setup.py

dependencies = [
    "datefinder~=0.7.3",
    "pika~=1.3.0",
    "python-magic~=0.4.27; sys_platform == 'linux' or sys_platform == 'darwin'",
    "python-magic-bin~=0.4.14; sys_platform == 'win32'",
    "python_json_logger~=2.0.4",
    "PyYAML~=6.0",
    "pydantic~=2.8.2",
    "requests~=2.32.2",
    "setuptools~=71.1.0",
    "cachetools~=5.4.0",
    "prometheus-client~=0.20.0",
    "opentelemetry-api~=1.22.0",
    "opentelemetry-sdk~=1.22.0",
    "deprecation~=2.1.0",
    "filigran-sseclient~=1.0.0",
    "stix2~=3.0.1"
]

[project.urls]
Repository = "https://github.com/OpenCTI-Platform/client-python"

[project.optional-dependencies]
test = [
    "black==24.4.2",
    "build>=0.7",
    "isort>=5.10",
    "pre-commit~=3.3",
    "pytest~=8.1",
    "pytest-cases~=3.6",
    "pytest-cov~=5.0",
    "pytest_randomly~=3.8",
    "types-python-dateutil>=2.8",
    "types-pytz>=2021.3.5",
    "wheel~=0.38"
]
dev = [
    "bandit~=1.7.10",
    "black~=24.4.0",
    "build~=1.2.1",
    "isort~=5.13.0",
    "types-pytz~=2024.1.0.20240203",
    "pip-audit~=2.7.3",
    "pre-commit~=3.7.0",
    "pytest-cases~=3.8.0",
    "pytest-cov~=5.0.0",
    "pytest_randomly~=3.15.0",
    "pytest~=8.2.0",
    "types-python-dateutil~=2.9.0",
    "wheel~=0.43.0",
]
doc = [
    "autoapi~=2.0.1",
    "sphinx-autodoc-typehints~=2.2.2",
    "sphinx-rtd-theme~=2.0.0"
]

[tool.isort]
profile = "black"

[tool.black]
target-version = ["py311"]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
no_implicit_optional = true
no_implicit_reexport = true
show_error_context = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
